--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,25 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <title>Last.fm API Documentation</title>
+  <head>
+    <title>Scalar API Reference</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="https://unpkg.com/swagger-ui-dist@5.11.0/swagger-ui.css">
-</head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  </head>
 
-<body>
-    <div id="swagger-ui"></div>
-    <script src="https://unpkg.com/swagger-ui-dist@5.11.0/swagger-ui-bundle.js"></script>
+  <body>
+    <div id="app"></div>
+
+    <!-- Load the Script -->
+    <script src="https://cdn.jsdelivr.net/npm/@scalar/api-reference"></script>
+
+    <!-- Initialize the Scalar API Reference -->
     <script>
-        window.onload = () => {
-            window.ui = SwaggerUIBundle({
-                url: "/api/doc",
-                dom_id: '#swagger-ui',
-                deepLinking: true,
-                presets: [
-                    SwaggerUIBundle.presets.apis,
-                    SwaggerUIBundle.SwaggerUIStandalonePreset
-                ],
-            });
-        };
+      Scalar.createApiReference("#app", {
+        // The URL of the OpenAPI/Swagger document
+        url: "/api/doc",
+        // Avoid CORS issues
+        proxyUrl: "https://proxy.scalar.com",
+      });
     </script>
-</body>
-
+  </body>
 </html>
